spring-boot examples first commit

--- a/spring-boot/roles/iptables/tasks/main.yml
+++ b/spring-boot/roles/iptables/tasks/main.yml
@@ -1,5 +1,4 @@
-- hosts: server
-  sudo: yes
-  tasks:
-    - name: stop iptables
-      service: name=iptables state=stopped
+---
+# stop iptables
+- name: stop iptables
+  service: name=iptables state=stopped
