--- a/spring-boot/roles/httpd/tasks/main.yml
+++ b/spring-boot/roles/httpd/tasks/main.yml
@@ -1,13 +1,10 @@
-- hosts: server
-  sudo: yes
-  tasks:
-    - name: install httpd
-      yum: name=httpd state=installed
-    - name: copy default httpd.conf
-      copy: src=httpd.conf dest=/etc/httpd/conf/httpd.conf
-      notify: restart httpd
-    - name: service
-      service: name=httpd state=running enabled=yes
-  handlers:
-    - name: restart httpd
-      service: name=httpd state=restarted
+---
+- name: install httpd
+  yum: name=httpd state=installed
+- name: copy default httpd.conf
+  #copy: src=httpd.conf dest=/etc/httpd/conf/httpd.conf
+  template: src=httpd.conf dest=/etc/httpd/conf/
+  notify: restart httpd
+- name: service
+  service: name=httpd state=running enabled=yes
+
