--- a/spring-boot/roles/selinux/tasks/main.yml
+++ b/spring-boot/roles/selinux/tasks/main.yml
@@ -17,5 +17,6 @@
   command: rpm -ivh /tmp/epel-release-7-5.noarch.rpm creates=/etc/yum.repos.d/epel.repo
   when: "ansible_os_family == 'RedHat' and ansible_distribution_major_version == '7'"
 
+# SELinuxが有効である場合、サーバ側にlibselinux-pythonのインストールが必要
 - name: Install libselinux-python
   yum: name=libselinux-python
