spring-boot add basic settings

--- a/spring-boot/site.yml
+++ b/spring-boot/site.yml
@@ -2,7 +2,9 @@
 - hosts: spring-boot
   become: yes 
   roles:
+    - user
     - selinux
     - iptables
     - httpd
     - jdk
+    - spring-boot
