spring-boot modify

--- a/spring-boot/roles/httpd/templates/httpd.conf
+++ b/spring-boot/roles/httpd/templates/httpd.conf
@@ -482,7 +482,7 @@ HostnameLookups Off
 # logged here.  If you *do* define an error logfile for a <VirtualHost>
 # container, that host's errors will be logged there and not here.
 #
-ErrorLog logs/error_log
+ErrorLog {{LOG_OUTPUT_DIR}}/error_log
 
 #
 # LogLevel: Control the number of messages logged to the error_log.
@@ -524,7 +524,7 @@ LogFormat "%{User-agent}i" agent
 # For a single logfile with access, agent, and referer information
 # (Combined Logfile Format), use the following directive:
 #
-CustomLog logs/access_log combined
+CustomLog {{LOG_OUTPUT_DIR}}/access_log combined
 
 #
 # Optionally add a line containing the server version and virtual host
@@ -1009,16 +1009,16 @@ BrowserMatch "^Dreamweaver-WebDAV-SCM1" redirect-carefully
 #    CustomLog logs/dummy-host.example.com-access_log common
 #</VirtualHost>
 
-DoSDetection On
-DoSPeriod 60
-DoSThreshold 10
-DoSHardThreshold 20
-DoSBanPeriod 60
-DoSTableSize 10
-DoSIgnoreContentType image/*
+#DoSDetection On
+#DoSPeriod 60
+#DoSThreshold 10
+#DoSHardThreshold 20
+#DoSBanPeriod 60
+#DoSTableSize 10
+#DoSIgnoreContentType image/*
 
-RewriteEngine On
-RewriteCond %{ENV:SuspectHardDoS} =1
-RewriteRule .* - [R=503,L]
-ErrorDocument 503 "Server is busy."
+#RewriteEngine On
+#RewriteCond %{ENV:SuspectHardDoS} =1
+#RewriteRule .* - [R=503,L]
+#ErrorDocument 503 "Server is busy."
 
