httpd proxy setting

--- a/spring-boot/roles/httpd/templates/httpd.conf
+++ b/spring-boot/roles/httpd/templates/httpd.conf
@@ -1022,3 +1022,5 @@ BrowserMatch "^Dreamweaver-WebDAV-SCM1" redirect-carefully
 #RewriteRule .* - [R=503,L]
 #ErrorDocument 503 "Server is busy."
 
+ProxyPass /{{CONTEXT_ROOT}} http://localhost:8080/{{CONTEXT_ROOT}}
+ProxyPassReverse /{{CONTEXT_ROOT}} http://localhost:8080/{{CONTEXT_ROOT}}
