--- a/spring-boot/roles/httpd/templates/httpd.conf
+++ b/spring-boot/roles/httpd/templates/httpd.conf
@@ -213,7 +213,6 @@ LoadModule version_module modules/mod_version.so
 #LoadModule ident_module modules/mod_ident.so
 #LoadModule log_forensic_module modules/mod_log_forensic.so
 #LoadModule unique_id_module modules/mod_unique_id.so
-LoadModule dosdetector_module /usr/lib/httpd/modules/mod_dosdetector.so
 #
 
 #
@@ -482,7 +481,7 @@ HostnameLookups Off
 # logged here.  If you *do* define an error logfile for a <VirtualHost>
 # container, that host's errors will be logged there and not here.
 #
-ErrorLog {{LOG_OUTPUT_DIR}}/error_log
+ErrorLog {{HTTPD_LOG_OUTPUT_DIR}}/error_log
 
 #
 # LogLevel: Control the number of messages logged to the error_log.
@@ -524,7 +523,7 @@ LogFormat "%{User-agent}i" agent
 # For a single logfile with access, agent, and referer information
 # (Combined Logfile Format), use the following directive:
 #
-CustomLog {{LOG_OUTPUT_DIR}}/access_log combined
+CustomLog {{HTTPD_LOG_OUTPUT_DIR}}/access_log combined
 
 #
 # Optionally add a line containing the server version and virtual host
@@ -1022,5 +1021,5 @@ BrowserMatch "^Dreamweaver-WebDAV-SCM1" redirect-carefully
 #RewriteRule .* - [R=503,L]
 #ErrorDocument 503 "Server is busy."
 
-ProxyPass /{{CONTEXT_ROOT}} http://localhost:8080/{{CONTEXT_ROOT}}
-ProxyPassReverse /{{CONTEXT_ROOT}} http://localhost:8080/{{CONTEXT_ROOT}}
+ProxyPass /{{HTTPD_CONTEXT_ROOT}} http://localhost:8080/{{HTTPD_CONTEXT_ROOT}}
+ProxyPassReverse /{{HTTPD_CONTEXT_ROOT}} http://localhost:8080/{{HTTPD_CONTEXT_ROOT}}
