gruop_vars -> vars

--- a/springboot/roles/httpd/tasks/main.yml
+++ b/springboot/roles/httpd/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: create log output directory
-  file: path={{HTTPD_LOG_OUTPUT_DIR}} state=directory owner={{HTTPD_USER}} group={{HTTPD_USER}} mode=0755
+  file: path={{httpd.log_output_dir}} state=directory owner={{httpd.user}} group={{httpd.group}} mode=0755
 
 - name: install httpd
   yum: name=httpd state=installed
