--- a/springboot/site.yml
+++ b/springboot/site.yml
@@ -1,10 +1,10 @@
 ---
-- hosts: spring-boot
+- hosts: springboot
   become: yes 
   roles:
     - selinux
     - iptables
-    - spring-boot
+    - springboot
     - httpd
     - jdk
     - postgresql
