--- a/springboot/roles/springboot/tasks/main.yml
+++ b/springboot/roles/springboot/tasks/main.yml
@@ -1,20 +1,2 @@
 ---
-# group add
-- group: name={{  springboot.group  }} gid={{  springboot.gid  }}
-
-# user add
-- user: name={{ springboot.user }} comment="{{ springboot.user }}" 
-        uid={{ springboot.uid }} group={{ springboot.group }} password={{ springboot.password }}
-
-- name: create springboot root directory
-  file: path={{ springboot.base_dir }} state=directory owner={{ springboot.user }} 
-        group={{ springboot.user }} mode=0755
-
-- name: copy logback.xml
-  template: src=logback.xml dest={{ springboot.base_dir }}/logback.xml 
-            owner={{ springboot.user }} group={{ springboot.user }}
-
-- name: copy springboot start shell
-  template: src=service.sh dest={{ springboot.base_dir }}/service.sh 
-            owner={{ springboot.user }} group={{ springboot.user }} mode=0755
-
+- include: springboot.yml tags=springboot
