--- a/springboot/roles/jdk/tasks/main.yml
+++ b/springboot/roles/jdk/tasks/main.yml
@@ -1,16 +1,2 @@
 ---
-- name: check java rpm
-  stat: path=jdk.rpm
-  register: java_exists
-
-- debug: var=java_exists.stat.md5
-
-- name: wget java
-  command: >
-    wget -O jdk.rpm --no-check-certificate --no-cookies
-    --header "Cookie: oraclelicense=accept-securebackup-cookie" "{{ jdk.dl_url }}"
-  when: java_exists.stat.md5 is not defined
-
-- name: install java
-  yum: name=jdk.rpm
-
+- include: jdk.yml tags=jdk
