--- a/springboot/roles/postgresql/handlers/main.yml
+++ b/springboot/roles/postgresql/handlers/main.yml
@@ -1,3 +1,3 @@
 ---
-- name: reload postgresql
-  service: name=postgresql state=reloaded
+- name: restart postgresql
+  service: name=postgresql state=restarted
